[package]
name = "storage-contract"
version = "0.2.0"
authors = ["KonradStaniec <konrad.staniec@gmail.com>", "Mauro Lacy <mauro@lacy.com.es>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = "./scripts/optimizer.sh"

[dependencies]
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = { version = "1.0.57" }

cosmwasm-schema = "2.1.4"
cosmwasm-std = "2.1.4"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"

babylon-bindings = { git = "https://github.com/babylonlabs-io/bindings", tag = "v0.2.0" }

[dev-dependencies]
